k8s/api-gateway-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jap-shop-api-gateway-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jap-shop-api-gateway-service
  template:
    metadata:
      labels:
        app: jap-shop-api-gateway-service
    spec:
      containers:
        - name: jap-shop-api-gateway-service
          image: docker.io/dip75016860/jap-shop-api-gateway-service:${COMMIT_ID}
          ports:
            - containerPort: 4001
