k8s/api-gateway-service/service-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: jap-shop-api-gateway-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: jap-shop-api-gateway-service
  ports:
    - port: 4001
      targetPort: 4001
