k8s/api-gateway-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jap-shop-api-gateway-service
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.janakalyanayurved.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jap-shop-api-gateway-service
            port:
              number: 4001
